# console

./: .gitattributes  .gitignore  Console.lnk  Terminal.lnk  license.fonts  profiles.json  readme.md  register-wt.cmd  register.cmd  settings.json
etc/: config
lnk/: Console.lnk  Terminal.lnk
lnk/wt/: Console.lnk  Terminal.lnk
src/: .gitignore  CMakeLists.txt  CMakeSettings.json  console.cpp  console.manifest
usr/share/mintty/info/: charnames.txt
usr/share/mintty/lang/: lang.zoo
usr/share/mintty/sounds/: sounds.zoo
usr/share/mintty/themes/: themes.zoo
